--- a/P.S/even-odd/index.html
+++ b/P.S/even-odd/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Problem Solving</h1>
+    <script src="sum-of-positive.js"></script>
     <script src="even-odd.js"></script>
   </body>
 </html>
